--- a/frontend_money/src/app/components/profile/profile.component.html
+++ b/frontend_money/src/app/components/profile/profile.component.html
@@ -18,7 +18,7 @@
         </div>
         
         <div class="profile-info">
-          <h3>{{ currentUser?.firstName || 'Stein' }} {{ currentUser?.lastName || 'Ben' }}</h3>
+          <h3>{{ currentUser?.username || 'Stein' }} {{ currentUser?.username || 'Ben' }}</h3>
           <p>Full Stack Developer</p>
         </div>
 
