--- a/frontend_money/src/app/components/layout/layout.component.html
+++ b/frontend_money/src/app/components/layout/layout.component.html
@@ -28,6 +28,45 @@
               <span *ngIf="!sidebarCollapsed">Dashboard</span>
             </a>
           </li>
+          <li>
+            <a routerLink="/financial-dashboard" routerLinkActive="active" class="nav-link">
+              <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M8.433 7.418c.155-.103.346-.196.567-.267v1.698a2.305 2.305 0 01-.567-.267C8.07 8.34 8 8.114 8 8c0-.114.07-.34.433-.582zM11 12.849v-1.698c.22.071.412.164.567.267.364.243.433.468.433.582 0 .114-.07.34-.433.582a2.305 2.305 0 01-.567.267z"/>
+                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-13a1 1 0 10-2 0v.092a4.535 4.535 0 00-1.676.662C6.602 6.234 6 7.009 6 8c0 .99.602 1.765 1.324 2.246.48.32 1.054.545 1.676.662v1.941c-.391-.127-.68-.317-.843-.504a1 1 0 10-1.51 1.31c.562.649 1.413 1.076 2.353 1.253V15a1 1 0 102 0v-.092a4.535 4.535 0 001.676-.662C13.398 13.766 14 12.991 14 12c0-.99-.602-1.765-1.324-2.246A4.535 4.535 0 0011 9.092V7.151c.391.127.68.317.843.504a1 1 0 101.511-1.31c-.563-.649-1.413-1.076-2.354-1.253V5z" clip-rule="evenodd"/>
+              </svg>
+              <span *ngIf="!sidebarCollapsed">Money Tracker</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="nav-section">
+        <h3 *ngIf="!sidebarCollapsed">Financial Management</h3>
+        <ul>
+          <li>
+            <a routerLink="/accounts" routerLinkActive="active" class="nav-link">
+              <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M4 4a2 2 0 00-2 2v4a2 2 0 002 2V6h10a2 2 0 00-2-2H4zM14 6a2 2 0 012 2v4a2 2 0 01-2 2H6a2 2 0 01-2-2V8a2 2 0 012-2h8zM6 8a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2a2 2 0 012-2h2z"/>
+              </svg>
+              <span *ngIf="!sidebarCollapsed">Accounts</span>
+            </a>
+          </li>
+          <li>
+            <a routerLink="/categories" routerLinkActive="active" class="nav-link">
+              <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M3 3a1 1 0 000 2v8a2 2 0 002 2h2.586l-1.293 1.293a1 1 0 101.414 1.414L10 15.414l2.293 2.293a1 1 0 001.414-1.414L12.414 15H15a2 2 0 002-2V5a1 1 0 100-2H3zm11.707 4.707a1 1 0 00-1.414-1.414L10 9.586 8.707 8.293a1 1 0 00-1.414 0l-2 2a1 1 0 101.414 1.414L8 10.414l1.293 1.293a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
+              </svg>
+              <span *ngIf="!sidebarCollapsed">Categories</span>
+            </a>
+          </li>
+          <li>
+            <a routerLink="/transactions" routerLinkActive="active" class="nav-link">
+              <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd"/>
+              </svg>
+              <span *ngIf="!sidebarCollapsed">Transactions</span>
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -64,14 +103,6 @@
       <div class="nav-section">
         <h3 *ngIf="!sidebarCollapsed">Application</h3>
         <ul>
-          <li>
-            <a routerLink="/transactions" routerLinkActive="active" class="nav-link">
-              <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
-                <path d="M4 4a2 2 0 00-2 2v4a2 2 0 002 2V6h10a2 2 0 00-2-2H4zM14 6a2 2 0 012 2v4a2 2 0 01-2 2H6a2 2 0 01-2-2V8a2 2 0 012-2h8zM6 8a2 2 0 012 2v2a2 2 0 01-2 2H4a2 2 0 01-2-2v-2a2 2 0 012-2h2z"/>
-              </svg>
-              <span *ngIf="!sidebarCollapsed">Transactions</span>
-            </a>
-          </li>
           <li>
             <a class="nav-link">
               <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
