--- a/frontend_money/src/app/components/login/login.component.html
+++ b/frontend_money/src/app/components/login/login.component.html
@@ -102,9 +102,9 @@
 
         <!-- Social Login Options -->
         <div class="social-login">
-          <div class="divider">
-            <span>Login With</span>
-          </div>
+        <div class="social-login">
+          <div class="divider">Login With</div>
+        </div>
           <div class="social-buttons">
             <button type="button" class="social-btn google-btn">
               <svg width="20" height="20" viewBox="0 0 24 24">
