--- a/frontend_money/src/app/components/accounts/accounts.component.html
+++ b/frontend_money/src/app/components/accounts/accounts.component.html
@@ -4,12 +4,21 @@
       <h1>Accounts</h1>
       <p>Manage your financial accounts and track balances.</p>
     </div>
-    <button class="btn btn-primary" (click)="openAccountModal()">
-      <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
-        <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd"/>
-      </svg>
-      Add Account
-    </button>
+    <div class="header-actions">
+      <button class="btn btn-secondary" routerLink="/create-account">
+        <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M4 4a2 2 0 00-2 2v4a2 2 0 002 2V6h10a2 2 0 00-2-2H4z"/>
+          <path fill-rule="evenodd" d="M6 8a2 2 0 012-2h8a2 2 0 012 2v6a2 2 0 01-2 2H8a2 2 0 01-2-2V8zm2 0v6h8V8H8z" clip-rule="evenodd"/>
+        </svg>
+        Create Account
+      </button>
+      <button class="btn btn-primary" (click)="openAccountModal()">
+        <svg width="20" height="20" fill="currentColor" viewBox="0 0 20 20">
+          <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd"/>
+        </svg>
+        Add Account
+      </button>
+    </div>
   </div>
 
   <!-- Account Summary -->
