--- a/frontend_money/src/app/components/signup/signup.component.html
+++ b/frontend_money/src/app/components/signup/signup.component.html
@@ -114,7 +114,7 @@
               class="form-input"
               [class.error]="signupForm.get('roleid')?.invalid && signupForm.get('roleid')?.touched">
               <option value="">Select a role</option>
-              <option *ngFor="let role of roles" [value]="role.id">{{ role.name }}</option>
+              <option *ngFor="let role of roles" [value]="role.userId">{{ role.roleName }}</option>
             </select>
             <div class="error-message" *ngIf="signupForm.get('roleid')?.invalid && signupForm.get('roleid')?.touched">
               Please select a role
@@ -183,7 +183,9 @@
             </div>
           </div>
         </div>
-
+        <div *ngIf="signupSuccess" class="success-message">
+  {{ signupSuccess }}
+</div>
         <div class="error-message" *ngIf="signupError">
           {{ signupError }}
         </div>
