Global Notification System for Angular Application

--- a/frontend_money/src/app/components/layout/layout.component.html
+++ b/frontend_money/src/app/components/layout/layout.component.html
@@ -226,4 +226,7 @@
       <router-outlet></router-outlet>
     </div>
   </main>
+
+  <!-- Global Notification Component -->
+  <app-notification></app-notification>
 </div>
